plugins {
    id "com.github.johnrengelman.shadow" version "8.1.1"
    id "java"
    id "io.freefair.lombok" version "8.4"
    id "eclipse"
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'org.apache.commons:commons-lang3:3.13.0'
    implementation 'org.apache.commons:commons-text:1.10.0'
    implementation 'commons-io:commons-io:2.14.0'
    implementation 'it.unimi.dsi:fastutil-core:8.5.12'
    implementation 'commons-codec:commons-codec:1.16.0'
    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
    implementation 'com.github.FireMasterK.NewPipeExtractor:NewPipeExtractor:5518112dce594bb4cd07d8ed3391bcc5e688f829'
    implementation 'com.github.FireMasterK:nanojson:9f4af3b739cc13f3d0d9d4b758bbe2b2ae7119d7'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'com.rometools:rome:2.1.0'
    implementation 'com.rometools:rome-modules:2.1.0'
    implementation 'org.jsoup:jsoup:1.16.1'
    implementation 'io.activej:activej-common:5.5'
    implementation 'io.activej:activej-http:5.5'
    implementation 'io.activej:activej-boot:5.5'
    implementation 'io.activej:activej-specializer:5.5'
    implementation 'io.activej:activej-launchers-http:5.5'
    implementation 'org.postgresql:postgresql:42.6.0'
    implementation 'org.hibernate:hibernate-core:6.3.1.Final'
    implementation 'org.hibernate:hibernate-hikaricp:6.3.1.Final'
    implementation 'org.liquibase:liquibase-core:4.23.2'
    implementation('org.liquibase.ext:liquibase-yugabytedb:4.23.2') { exclude group: 'org.liquibase' }
    implementation 'com.zaxxer:HikariCP:5.0.1'
    implementation 'org.springframework.security:spring-security-crypto:6.1.4'
    implementation 'commons-logging:commons-logging:1.2'
    implementation(platform("com.squareup.okhttp3:okhttp-bom:4.11.0"))
    implementation 'com.squareup.okhttp3:okhttp'
    implementation 'com.squareup.okhttp3:okhttp-brotli'
    implementation 'io.sentry:sentry:6.30.0'
    implementation 'rocks.kavin:reqwest4j:1.0.12'
    implementation 'io.minio:minio:8.5.6'
}

shadowJar {
    // minimize()
}

jar {
    manifest {
        attributes(
                'Main-Class': 'me.kavin.piped.Main'
        )
    }
}

group = 'me.kavin.piped'
version = '1.0'
sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21
